--- a/core-redux_0.0.1/locale/en/base.cfg
+++ b/core-redux_0.0.1/locale/en/base.cfg
@@ -3,3 +3,10 @@ science-pack-1=Basic science pack
 science-pack-2=Automation science pack
 science-pack-3=Chemical science pack
 high-tech-science-pack=Avant garde science pack
+
+[technology-name]
+rocket-fuel=Rocket fuel
+rocket-structure=Rocket structure
+avant-garde-science=Avant garde science
+production-science=Production science
+automation-science=Automation science
