--- a/module-redux_0.0.1/locale/en/base.cfg
+++ b/module-redux_0.0.1/locale/en/base.cfg
@@ -1,1 +1,4 @@
-
+[item-name]
+speed-module-0=Speed module 0
+productivity-module-0=Productivity module 0
+effectivity-module-0=Effectivity module 0
