--- a/equipment-redux_0.0.1/locale/en/base.cfg
+++ b/equipment-redux_0.0.1/locale/en/base.cfg
@@ -1,1 +1,9 @@
+[equipment-name]
+fusion-reactor-mk2-equipment=Portable fusion reactor mk2
+exoskeleton-mk2-equipment=Exoskeleton mk2
+night-vision-mk2-equipment=Nightvision mk2
 
+[technology-name]
+fusion-reactor-mk2-equipment=Portable fusion reactor mk2
+exoskeleton-mk2-equipment=Exoskeleton mk2
+night-vision-mk2-equipment=Nightvision mk2
