--- a/core-redux_0.0.1/locale/en/base.cfg
+++ b/core-redux_0.0.1/locale/en/base.cfg
@@ -10,3 +10,11 @@ rocket-structure=Rocket structure
 avant-garde-science=Avant garde science
 production-science=Production science
 automation-science=Automation science
+
+[map-gen-preset-name]
+alexas-config=Alexa's config
+alexas-config-fight=Angry Alexa's config
+
+[map-gen-preset-description]
+alexas-config=A config ideal for heavy train usage without the tedium of setting up hundreds of outposts without enemies.
+alexas-config-fight=A config ideal for heavy train usage without the tedium of setting up hundreds of outposts.
