--- a/machine-redux_0.0.1/locale/en/base.cfg
+++ b/machine-redux_0.0.1/locale/en/base.cfg
@@ -1,1 +1,8 @@
+[item-name]
+electric-mining-drill-2=Advanced mining drill
 
+[entity-name]
+electric-mining-drill-2=Advanced mining drill
+
+[technology-name]
+advanced-material-extraction=Advanced material extraction
