you look like a basset hound

--- a/logistic-redux_0.0.1/locale/en/base.cfg
+++ b/logistic-redux_0.0.1/locale/en/base.cfg
@@ -1,1 +1,12 @@
+[item-name]
+fast-long-inserter=Fast long handed inserter
+filter-inserter=Fast filter inserter
+stack-inserter=Fast stack inserter
+stack-filter-inserter=Fast stack filter inserter
+express-inserter=Express inserter
+express-long-inserter=Express long handed inserter
+express-filter-inserter=Express filter inserter
+express-stack-inserter=Express stack inserter
+express-stack-filter-inserter=Express stack filter inserter
 
+[entity-name]
