--- a/equipment-redux_0.0.1/locale/en/base.cfg
+++ b/equipment-redux_0.0.1/locale/en/base.cfg
@@ -7,3 +7,7 @@ night-vision-mk2-equipment=Nightvision mk2
 fusion-reactor-mk2-equipment=Portable fusion reactor mk2
 exoskeleton-mk2-equipment=Exoskeleton mk2
 night-vision-mk2-equipment=Nightvision mk2
+
+[mod-setting-name]
+redux-equipment-size=Equipment grid size
+redux-roboport-buff=Personal roboport fast recharge
