--- a/logistic-redux_0.0.1/locale/en/base.cfg
+++ b/logistic-redux_0.0.1/locale/en/base.cfg
@@ -8,3 +8,6 @@ express-long-inserter=Express long handed inserter
 express-filter-inserter=Express filter inserter
 express-stack-inserter=Express stack inserter
 express-stack-filter-inserter=Express stack filter inserter
+
+[mod-setting-name]
+redux-high-speed=High speed logistics
