--- a/core-redux_0.0.1/locale/en/base.cfg
+++ b/core-redux_0.0.1/locale/en/base.cfg
@@ -18,3 +18,7 @@ alexas-config-fight=Angry Alexa's config
 [map-gen-preset-description]
 alexas-config=A config ideal for heavy train usage without the tedium of setting up hundreds of outposts without enemies.
 alexas-config-fight=A config ideal for heavy train usage without the tedium of setting up hundreds of outposts.
+
+[mod-setting-name]
+redux-ore-icons=New ore icons
+redux-science-icons=New science icons
