--- a/core-redux_0.0.1/locale/en/base.cfg
+++ b/core-redux_0.0.1/locale/en/base.cfg
@@ -1,6 +1,6 @@
 [item-name]
-science-pack-1=Basic science pack
-science-pack-2=Automation science pack
+science-pack-1=Automation science pack
+science-pack-2=Logistic science pack
 science-pack-3=Chemical science pack
 high-tech-science-pack=Avant garde science pack
 
